# tartaros-telegram

./: .env  Cargo.toml  Procfile  README.md  Rocket.toml
migrations/2022-06-23-172634_report_user/: down.sql  up.sql
migrations/2022-06-30-200125_create_report/: up.sql
src/: db_conn.rs  lib.rs  main.rs  models.rs  schema.rs
