[package]
name = "tartaros-telegram"
version = "0.1.0"
authors = ["nyx69"]
edition = "2021"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
diesel = { version = "1.4.7", features = ["chrono"], pool_size = 10 }
dotenv = "0.7.1"
teloxide = { version = "0.9.2", features = ["macros", "auto-send"] }
log = "0.4"
pretty_env_logger = "0.4"
tokio = { version = "1.8", features = ["rt-multi-thread", "macros"] }
lazy_static = "1.4.0"
serde = "1.0.138"
futures = "0.3.5"

[dependencies.rocket]
version = "0.5.0-rc.1"
features = ["json"]

[dependencies.rocket_sync_db_pools]
version = "0.1.0-rc.1"
features = ["diesel_postgres_pool"]
default-features = false