[package]
name = "tartaros-telegram"
version = "0.1.0"
authors = ["nyx69"]
edition = "2021"

[dependencies]
sqlx = { version = "0.6.0", default-features = false, features = ["runtime-tokio-rustls", "macros", "chrono", "postgres"] }
dotenv = "0.15.0"
axum = { version = "0.5", features = ["headers", ] }
pretty_env_logger = "0.4"
tokio = { version = "1.8", features = ["rt-multi-thread", "macros"] }
serde = { version = "1.0.137", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
log = "0.4.17"
axum-sqlx-tx = { version = "0.3.0", features = ["runtime-tokio-rustls", "postgres"] }